fix my magazine subscription from wrapping on mz

--- a/wp-content/universal-assets/v1/scss/universal-topnav.scss
+++ b/wp-content/universal-assets/v1/scss/universal-topnav.scss
@@ -624,7 +624,7 @@ body:not(.makeco):not(.makershed):not(.makezine):not(#makerfaire):not(.makercamp
 			right: -25px;
 			top: 90% !important;
 			left: auto !important;
-			min-width: 260px;
+			min-width: 265px;
 			transform: none !important;
 			will-change: transform;
 			&::before {
